--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,7 +2,7 @@
 <% provide(:title, "Help") %>
 <html>
   <head>
-    <title> <%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    <title><%= full_title(yield(:title)) %></title>
   </head>
   <body>
     <h1>Help</h1>
